--- a/pom.xml
+++ b/pom.xml
@@ -132,16 +132,21 @@
           </execution>
         </executions>
       </plugin>
+<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.4</version>
+        <version>3.2.0</version>
         <configuration>
-          <source>1.8</source>
-          <encoding>UTF-8</encoding>
-          <links>
-            <link>http://docs.oracle.com/javase/8/docs/api/</link>
-          </links>
+          <source>${java.source.version}</source>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
+          <docletArtifact>
+            <groupId>ch.raffael.pegdown-doclet</groupId>
+            <artifactId>pegdown-doclet</artifactId>
+            <version>1.1</version>
+          </docletArtifact>
+          <useStandardDocletOptions>true</useStandardDocletOptions>
         </configuration>
         <executions>
           <execution>
@@ -153,6 +158,7 @@
           </execution>
         </executions>
       </plugin>
+-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
