--- a/heron-common/pom.xml
+++ b/heron-common/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>heron-3party</artifactId>
     <groupId>com.github.thinker0.heron</groupId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
