--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <groupId>com.github.thinker0.heron</groupId>
-  <artifactId>heron-3party</artifactId>
+  <artifactId>heron-3rdparty</artifactId>
   <version>1.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
