--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
   <modules>
     <module>heron-kafka-client</module>
+    <module>heron-pulsar-client</module>
     <module>heron-common</module>
   </modules>
 
@@ -26,6 +27,7 @@
     <slf4j.version>1.7.26</slf4j.version>
 
     <kafka.client.version>2.5.0</kafka.client.version>
+    <pulsar.version>2.6.0</pulsar.version>
     <jackson.version>2.9.8</jackson.version>
     <jackson.version.databind>${jackson.version}</jackson.version.databind>
 
@@ -33,6 +35,10 @@
     <commons-lang.version>2.6</commons-lang.version>
 
     <gitflow.version>1.14.0</gitflow.version>
+    <jaxb.version>2.3.0</jaxb.version>
+    <testng.version>6.14.3</testng.version>
+    <mockito.version>2.28.2</mockito.version>
+    <powermock.version>2.0.2</powermock.version>
   </properties>
   
   <licenses>
