Add common utils
Signed-off-by: thinker0 <thinker0@gmail.com>

--- a/heron-common/pom.xml
+++ b/heron-common/pom.xml
@@ -18,6 +18,16 @@
       <groupId>org.apache.heron</groupId>
       <artifactId>heron-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.0.1-jre</version>
+    </dependency>
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+      <version>4.0.2</version>
+    </dependency>
   </dependencies>
 
   <build>
