--- a/pom.xml
+++ b/pom.xml
@@ -159,13 +159,6 @@
         <configuration>
           <source>${java.source.version}</source>
           <encoding>${project.build.sourceEncoding}</encoding>
-          <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
-          <docletArtifact>
-            <groupId>ch.raffael.pegdown-doclet</groupId>
-            <artifactId>pegdown-doclet</artifactId>
-            <version>1.1</version>
-          </docletArtifact>
-          <useStandardDocletOptions>true</useStandardDocletOptions>
         </configuration>
         <executions>
           <execution>
@@ -174,6 +167,9 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <configuration>
+              <additionalOptions>-Xdoclint:none</additionalOptions>
+            </configuration>
           </execution>
         </executions>
       </plugin>
