--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
-    <version>21</version>
+    <version>23</version>
   </parent>
 
   <groupId>com.github.thinker0.heron</groupId>
@@ -15,6 +15,7 @@
 
   <modules>
     <module>heron-kafka-client</module>
+    <module>heron-pulsar-client</module>
     <module>heron-common</module>
   </modules>
 
@@ -26,6 +27,7 @@
     <slf4j.version>1.7.26</slf4j.version>
 
     <kafka.client.version>2.5.0</kafka.client.version>
+    <pulsar.version>2.6.0</pulsar.version>
     <jackson.version>2.9.8</jackson.version>
     <jackson.version.databind>${jackson.version}</jackson.version.databind>
 
@@ -33,6 +35,10 @@
     <commons-lang.version>2.6</commons-lang.version>
 
     <gitflow.version>1.14.0</gitflow.version>
+    <jaxb.version>2.3.0</jaxb.version>
+    <testng.version>6.14.3</testng.version>
+    <mockito.version>2.28.2</mockito.version>
+    <powermock.version>2.0.2</powermock.version>
   </properties>
   
   <licenses>
@@ -89,6 +95,20 @@
         <artifactId>commons-lang</artifactId>
         <version>${commons-lang.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>${testng.version}</version>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -139,13 +159,6 @@
         <configuration>
           <source>${java.source.version}</source>
           <encoding>${project.build.sourceEncoding}</encoding>
-          <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
-          <docletArtifact>
-            <groupId>ch.raffael.pegdown-doclet</groupId>
-            <artifactId>pegdown-doclet</artifactId>
-            <version>1.1</version>
-          </docletArtifact>
-          <useStandardDocletOptions>true</useStandardDocletOptions>
         </configuration>
         <executions>
           <execution>
@@ -154,6 +167,9 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <configuration>
+              <additionalOptions>-Xdoclint:none</additionalOptions>
+            </configuration>
           </execution>
         </executions>
       </plugin>
