--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.github.thinker0.heron</groupId>
   <artifactId>heron-3rdparty</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -59,7 +59,7 @@
     <connection>scm:git:https://github.com/thinker0/heron-3party.git</connection>
     <developerConnection>scm:git:git@github.com:thinker0/heron-3party.git</developerConnection>
     <url>https://github.com/thinker0/heron-3party</url>
-    <tag>HEAD</tag>
+    <tag>v1.0.3</tag>
   </scm>
 
   <dependencyManagement>
