--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <connection>scm:git:https://github.com/thinker0/heron-3party.git</connection>
     <developerConnection>scm:git:git@github.com:thinker0/heron-3party.git</developerConnection>
     <url>https://github.com/thinker0/heron-3party</url>
-    <tag>HEAD</tag>
+    <tag>v1.0.3</tag>
   </scm>
 
   <dependencyManagement>
