--- a/heron-pulsar-client/pom.xml
+++ b/heron-pulsar-client/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>com.github.thinker0.heron</groupId>
     <artifactId>heron-3rdparty</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
