--- a/heron-common/pom.xml
+++ b/heron-common/pom.xml
@@ -4,6 +4,7 @@
     <artifactId>heron-3rdparty</artifactId>
     <groupId>com.github.thinker0.heron</groupId>
     <version>1.0.5-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
