--- a/heron-kafka-client/pom.xml
+++ b/heron-kafka-client/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.github.thinker0.heron</groupId>
     <artifactId>heron-3rdparty</artifactId>
     <version>1.0.5-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>heron-kafka-client</artifactId>
