--- a/heron-pulsar-client/pom.xml
+++ b/heron-pulsar-client/pom.xml
@@ -25,7 +25,7 @@
     <groupId>com.github.thinker0.heron</groupId>
     <artifactId>heron-3rdparty</artifactId>
     <version>1.0.5-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>heron-pulsar-client</artifactId>
