--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,12 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.source.version>1.8</java.source.version>
+    <java.source.version>11</java.source.version>
 
     <slf4j.version>1.7.26</slf4j.version>
-
-    <kafka.client.version>2.7.0</kafka.client.version>
-    <pulsar.version>2.9.2</pulsar.version>
+    <guava.version>31.1-jre</guava.version>
+    <kafka.client.version>2.7.2</kafka.client.version>
+    <pulsar.version>2.10.0</pulsar.version>
     <jackson.version>2.12.6</jackson.version>
     <jackson.version.databind>2.12.6.1</jackson.version.databind>
 
@@ -112,7 +112,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>29.0-jre</version>
+        <version>${guava.version}</version>
       </dependency>
       <dependency>
         <groupId>com.esotericsoftware</groupId>
