--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,14 @@
     <slf4j.version>1.7.26</slf4j.version>
 
     <kafka.client.version>2.7.0</kafka.client.version>
-    <pulsar.version>2.7.1</pulsar.version>
-    <jackson.version>2.9.8</jackson.version>
-    <jackson.version.databind>${jackson.version}</jackson.version.databind>
+    <pulsar.version>2.9.2</pulsar.version>
+    <jackson.version>2.12.6</jackson.version>
+    <jackson.version.databind>2.12.6.1</jackson.version.databind>
 
-    <heron.version>0.20.3-incubating</heron.version>
+    <heron.version>0.20.4-incubating</heron.version>
     <commons-lang.version>2.6</commons-lang.version>
 
-    <gitflow.version>1.14.0</gitflow.version>
+    <gitflow.version>1.18.0</gitflow.version>
     <jaxb.version>2.3.0</jaxb.version>
     <testng.version>6.14.3</testng.version>
     <mockito.version>2.28.2</mockito.version>
@@ -45,7 +45,7 @@
   <licenses>
     <license>
       <name>The Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
 
@@ -117,7 +117,7 @@
       <dependency>
         <groupId>com.esotericsoftware</groupId>
         <artifactId>kryo</artifactId>
-        <version>4.0.2</version>
+        <version>5.3.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -186,7 +186,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
+        <version>3.0.0-M5</version>
         <configuration>
           <pushChanges>false</pushChanges>
           <localCheckout>false</localCheckout>
@@ -200,7 +200,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.7</version>
+        <version>1.6.13</version>
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
@@ -211,7 +211,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.5</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
