--- a/heron-hdfs/pom.xml
+++ b/heron-hdfs/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>heron-3rdparty</artifactId>
     <groupId>com.github.thinker0.heron</groupId>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>heron-hdfs</artifactId>
