--- a/heron-kafka-client/pom.xml
+++ b/heron-kafka-client/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.github.thinker0.heron</groupId>
     <artifactId>heron-3rdparty</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>heron-kafka-client</artifactId>
