--- a/heron-pulsar-client/pom.xml
+++ b/heron-pulsar-client/pom.xml
@@ -43,6 +43,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
