--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,11 @@
         <artifactId>commons-lang</artifactId>
         <version>${commons-lang.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>com.github.thinker0.heron</groupId>
+        <artifactId>heron-common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
