--- a/heron-common/pom.xml
+++ b/heron-common/pom.xml
@@ -8,6 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>heron-common</artifactId>
+  <name>Heron Common library</name>
 
   <dependencies>
     <dependency>
